@@ -7,6 +7,7 @@
 - Orthographic cameras allow a Near Clip of 0
 - Timeline won't auto-create CM brains when something dragged onto it
 - Confiner: Improvement in automatic path invalidation when number of path points path changes
+- Bugfix: screen composer guides drawn in wrong place for picture-in-picture
 - Bugfix: FreeLook now draws only 1 active composer guide at a time (fogbugz 1138263)
 - Bugfix: cameras sometimes snapped when interrupting blends
 - Bugfix: Path handles no longer scale with the path object
